# CiteGen

./: .gitignore  README.md  author_docx_gen.py  config_template.py  manual_download_helper.py  pyproject.toml  requirements.txt  step1_spider.py  step2_docx_gen.py  step3_analyze.py  utils.py
author_info/: Zhouchen_Lin.json
citation_spider/: author_crawler.py  paper_crawler.py
comment_analysis/: analyzer.py  citation_utils.py  model_config.py  prompts.py
docx_gen/: downloader.py  generator.py
paper_list/CFA Class-wise Calibrated Fair Adversarial Training/: (temp) CFA Class-wise Calibrated Fair Adversarial Training.docx  CFA Class-wise Calibrated Fair Adversarial Training.docx  citation_info.json  paper_info.json
paper_list/CFA Class-wise Calibrated Fair Adversarial Training/comment_analysis/: Exploring the robustness of in-context learning with noisy.json  Parameter interpolation adversarial training for robust image classification.json  all_snippets.json
paper_list/G CN Graph Gaussian Convolution Networks with Concentrated/: G CN Graph Gaussian Convolution Networks with Concentrated.docx  citation_info.json
